chore - polish documentation for docker image and heroku